# ai-coe

./: .env.example  .gitignore  README.md  app.py  auth.py  chatbot_gui.py  config.py  confluence_fetch.py  docs_consolidated.pkl  fetch_and_store_people_data.py  inspect_chromadb.py  langchain_helper.py  log_utils.py  main.py  main_rollback_before_confluence_loader.py  nltk_download.py  nltk_download_extra.py  openai_helper.py  people.py  people_rollback.py  proposal.md  pyproject.toml  rag_pipeline.py  rebuild_rag_pipeline.py  refresh_rag.py  requirements.txt  streamlit.css  summarize.py  watch_main.py
chatbot/: chatbot.py  commuto_chatbot.py  orderbot.py
docs/: finance-perks-reimbursement.md  go-to-person.md  growth-assessment-program-gap.md  holiday-leave.md  onboarding-faq.md  org-structure.md  promotions.md  pulse.md  roles_and_policies.md  tools-knowledge-center.md  vyaguta-coding-guidelines.md
guides/: confluence_fetch_guide.md  faq.md  fetch_and_store_people_guide.md  inspect_chromadb_guide.md  presentations.md  rag_pipeline_workflow.md  streamlit_gui_guide.md  vyaguta_assistant_interview_qa.md  workflow-explanation.md
mylangchain/: app.py
prompt_engineering/: expanding.py  inferring.py  transformming.py
